Airflow/mnt/logs/dag_id=get_Data_Submission_Reddit_pipeline/run_id=manual__2024-04-23T09:07:34.627533+00:00/task_id=load_data_to_postgres/attempt=2.log
[2024-04-23T09:08:24.703+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: get_Data_Submission_Reddit_pipeline.load_data_to_postgres manual__2024-04-23T09:07:34.627533+00:00 [queued]>
[2024-04-23T09:08:24.714+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: get_Data_Submission_Reddit_pipeline.load_data_to_postgres manual__2024-04-23T09:07:34.627533+00:00 [queued]>
[2024-04-23T09:08:24.714+0000] {taskinstance.py:2171} INFO - Starting attempt 2 of 2
[2024-04-23T09:08:24.739+0000] {taskinstance.py:2192} INFO - Executing <Task(PythonOperator): load_data_to_postgres> on 2024-04-23 09:07:34.627533+00:00
[2024-04-23T09:08:24.747+0000] {standard_task_runner.py:60} INFO - Started process 21911 to run task
[2024-04-23T09:08:24.755+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'get_Data_Submission_Reddit_pipeline', 'load_data_to_postgres', 'manual__2024-04-23T09:07:34.627533+00:00', '--job-id', '189', '--raw', '--subdir', 'DAGS_FOLDER/GetPost.py', '--cfg-path', '/tmp/tmp7ed47v5b']
[2024-04-23T09:08:24.758+0000] {standard_task_runner.py:88} INFO - Job 189: Subtask load_data_to_postgres
[2024-04-23T09:08:24.821+0000] {task_command.py:423} INFO - Running <TaskInstance: get_Data_Submission_Reddit_pipeline.load_data_to_postgres manual__2024-04-23T09:07:34.627533+00:00 [running]> on host 694ea5737885
[2024-04-23T09:08:24.904+0000] {taskinstance.py:2481} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='get_Data_Submission_Reddit_pipeline' AIRFLOW_CTX_TASK_ID='load_data_to_postgres' AIRFLOW_CTX_EXECUTION_DATE='2024-04-23T09:07:34.627533+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-04-23T09:07:34.627533+00:00'
[2024-04-23T09:08:24.912+0000] {logging_mixin.py:188} INFO - /opt/***/dags/staging/Submission_Reddit_Data_2024-04-23T09:07:34.627533+00:00.json
[2024-04-23T09:08:24.921+0000] {base.py:83} INFO - Using connection ID 'my_***_conn' for task execution.
[2024-04-23T09:08:24.929+0000] {taskinstance.py:2699} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/GetPost.py", line 105, in _load_data_to_postgres
    cursor.execute(sql)
psycopg2.errors.SyntaxError: trailing junk after numeric literal at or near "1c"
LINE 8:         VALUES (1cahvfk, Feature Store - Good enough option,...
                        ^

[2024-04-23T09:08:24.939+0000] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=get_Data_Submission_Reddit_pipeline, task_id=load_data_to_***, execution_date=20240423T090734, start_date=20240423T090824, end_date=20240423T090824
[2024-04-23T09:08:24.953+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 189 for task load_data_to_*** (trailing junk after numeric literal at or near "1c"
LINE 8:         VALUES (1cahvfk, Feature Store - Good enough option,...
                        ^
; 21911)
[2024-04-23T09:08:24.970+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-04-23T09:08:24.989+0000] {taskinstance.py:3281} INFO - 0 downstream tasks scheduled from follow-on schedule check
